src/ui/saves/boxes/style.css
.position-display-container {
  margin: auto;
  border-radius: 5px;
  display: flex;
  flex-direction: row;
  background-color: rgb(68, 102, 102);
  padding: 3px;
  gap: 3px;
  width: 180px;
}

.position-display-col {
  display: flex;
  flex: 1;
  gap: 3px;
  flex-direction: column;
}

.position-display-cell {
  min-width: 12px;
  aspect-ratio: 1;
  border-radius: 3px;
  background-color: #fff;
}

.position-display-cell-empty {
  background-color: #fff3;
}

.position-display-cell-active {
  background-color: #f55;
}

.save-close-button {
  padding: 4px;
  display: grid;
  aspect-ratio: 1;
  align-items: center;
  height: fit-content;
}

.box-card {
  padding: 0;
  display: flex;
  flex-direction: column;

  .rt-Separator {
    margin-bottom: 0.25rem;
  }
}

.box-grid {
  aspect-ratio: 6 / 5;
  box-sizing: border-box;
  width: 100%;
}

.home-box-card {
  aspect-ratio: 6 / 5;
  height: 30rem;
}

.box-card-disabled {
  --card-background-color: #666;
}

.box-navigation {
  display: flex;
  flex-direction: row;
  align-items: center;
  text-align: center;
  padding: 2px 0px;
  position: relative;
}

.box-navigation svg {
  height: 18px;
  width: 18px;
}

.box-name {
  display: grid;
  align-items: center;
  text-align: center;
  flex: 3;
  min-width: 50%;
  width: fit-content;
  max-width: 80%;
  margin: 0px 6px;
}

.box-name input {
  text-indent: 0px;
}

.home-box-header {
  padding: 6px;
  width: 100%;
  height: fit-content;
  max-height: 100%;
  overflow: auto;
  display: flex;
  flex-direction: column;
  gap: 4px;
}

.horiz-collapse {
  visibility: collapse;
  width: 0px !important;
  height: 0px !important;
}

.save-header {
  display: flex;
  flex-direction: row;
  position: relative;
  align-items: center;
  width: 100%;
  margin: 0;
  inset: 1px;
}

.save-header svg {
  height: 18px;
  width: 18px;
}

.save-header-game {
  font-weight: bold;
  display: flex;
  flex-direction: row;
  gap: 4px;
  padding: 4px 14px 4px 4px;
  border-top-left-radius: 4px;
}

.save-menu-buttons-right {
  margin-right: 6px;
}

.save-details-modal {
  display: flex;
  flex-direction: column;
  min-width: 800px;
  width: 80%;
  max-height: fit-content;
  height: 95%;
  overflow: hidden;
  gap: 1px;
  padding: 0;
}

.home-box-delete-button {
  position: absolute !important;
  z-index: 1;
  top: 0;
  right: 0;
}

.box-overview-container {
  display: flex;
  align-items: start;
  justify-content: start;
  width: 100%;
  height: 120px;
}

.box-overview-button {
  align-items: start;
  padding: 4px 4px 0px 4px;
  width: 100%;
  min-width: 100%;
  height: 100%;
}

.box-overview-title-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  flex: 1;
  overflow: hidden;
  text-overflow: ellipsis;
}

.box-overview-title {
  display: flex;
  display: -webkit-box;
  flex-direction: column;
  overflow: hidden;
  text-overflow: ellipsis;
  line-clamp: 3;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
}

.ToggleGroup {
  display: flex;

  & button {
    border-radius: 0;
    padding: 0.2em 0.3em;
  }

  & svg {
    height: 14px;
  }
}

.ToggleGroupItem {
  display: flex;
  font-size: 15px;
  line-height: 1;
  align-items: center;
  justify-content: center;
  margin-left: 1px;
  user-select: none;
  flex: 1;
}

.ToggleGroup .ToggleGroupItem:first-child {
  margin-left: 0;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.ToggleGroup .ToggleGroupItem:last-child {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.ToggleGroupItem:hover:not(:disabled) {
  background-color: var(--accent-a5);
}

.ToggleGroupItem[data-state='on'] {
  background-color: var(--focus-8);
}

.ToggleGroupItem:focus {
  position: relative;
}

.box-icon-mon-container {
  border-radius: 3px;
  display: flex;
  flex-direction: row;
  background-color: rgb(68, 102, 102);
  padding: 3px;
  gap: 1px;
  width: 30;
}

.box-icon-mon-col {
  display: flex;
  flex: 1;
  gap: 1px;
  flex-direction: column;
}

.box-icon-mon-indicator {
  min-width: 3px;
  aspect-ratio: 1;
  border-radius: 1px;
  background-color: #fff;
}

.box-icon-mon-empty {
  background-color: #fff3;
}

.box-slot-missing-id {
  aspect-ratio: 1;
  margin: auto;
  font-weight: bold;
  font-size: 1.2rem;
}

